--- a/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
@@ -36,6 +36,12 @@
                 <input asp-for="User.Phone" class="form-control" />
                 <span asp-validation-for="User.Phone" class="text-danger"></span>
             </div>
+            @foreach (var item in Model.Servers)
+            {
+                <input type="checkbox" name="selectedServers" value="@item.Id" />
+                @item.Name
+                <br />
+            }
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
