--- a/ServMon/ServMon/Pages/SrvMon/Users/Details.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Details.cshtml
@@ -39,6 +39,16 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.User.Phone)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.User.Servers)
+        </dt>
+        <dd class="col-sm-10">
+            @foreach (var item in Model.User.Servers)
+            {
+                @Html.DisplayFor(modelItem => item.Name)
+                <br />
+            }
+        </dd>
     </dl>
 </div>
 <div>
