fixes for displaying lists of servers and users

--- a/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
@@ -36,12 +36,17 @@
                 <input asp-for="User.Phone" class="form-control" />
                 <span asp-validation-for="User.Phone" class="text-danger"></span>
             </div>
-            @foreach (var item in Model.Servers)
-            {
-                <input type="checkbox" name="selectedServers" value="@item.Id" />
-                @item.Name
-                <br />
-            }
+            <div class="form-group">
+                @Html.DisplayNameFor(model => model.Servers)
+                <div class="border border-2" style="padding: 1em">
+                    @foreach (var item in Model.Servers)
+                    {
+                        <input type="checkbox" name="selectedServers" value="@item.Id" />
+                        @item.Name
+                        <br />
+                    }
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
