--- a/ServMon/ServMon/Pages/SrvMon/Servers/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Servers/Create.cshtml
@@ -36,12 +36,17 @@
                     <input class="form-check-input" asp-for="Server.Activity" /> @Html.DisplayNameFor(model => model.Server.Activity)
                 </label>
             </div>
-            @foreach (var item in Model.Users)
-            {
-                <input type="checkbox" name="selectedUsers" value="@item.Id" />
-                @item.Name
-                <br />
-            }
+            <div class="form-group">
+                @Html.DisplayNameFor(model => model.Users)
+                <div class="border border-2" style="padding: 1em">
+                    @foreach (var item in Model.Users)
+                    {
+                        <input type="checkbox" name="selectedServers" value="@item.Id" />
+                        @item.Name
+                        <br />
+                    }
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-teal" />
             </div>
