--- a/ServMon/ServMon/Pages/SrvMon/Servers/Edit.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Servers/Edit.cshtml
@@ -38,13 +38,18 @@
                 </label>
             </div>
             <input type="hidden" asp-for="Server.CurrentStatus" />
-            @foreach (var item in Model.Users)
-            {
-                <input type="checkbox" name="selectedUsers" value="@item.Id"
-                   @(Model.Server.Users.Contains(item) ? "checked='checked'" : "") />
-                @item.Name
-                <br />
-            }
+            <div class="form-group">
+                @Html.DisplayNameFor(model => model.Users)
+                <div class="border border-2" style="padding: 1em">
+                    @foreach (var item in Model.Users)
+                    {
+                        <input type="checkbox" name="selectedServers" value="@item.Id"
+                           @(Model.Server.Users.Contains(item) ? "checked='checked'" : "") />
+                        @item.Name
+                        <br />
+                    }
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
