--- a/ServMon/ServMon/Pages/SrvMon/Users/Edit.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Edit.cshtml
@@ -37,13 +37,18 @@
                 <input asp-for="User.Phone" class="form-control" />
                 <span asp-validation-for="User.Phone" class="text-danger"></span>
             </div>
-            @foreach (var item in Model.Servers)
-            {
-                <input type="checkbox" name="selectedServers" value="@item.Id"
-                   @(Model.User.Servers.Contains(item) ? "checked='checked'" : "") />
-                @item.Name
-                <br />
-            }
+            <div class="form-group">
+                @Html.DisplayNameFor(model => model.Servers)
+                <div class="border border-2" style="padding: 1em">
+                    @foreach (var item in Model.Servers)
+                    {
+                        <input type="checkbox" name="selectedServers" value="@item.Id"
+                           @(Model.User.Servers.Contains(item) ? "checked='checked'" : "") />
+                        @item.Name
+                        <br />
+                    }
+                </div>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
