email through name or ip

--- a/ServMon/ServMon/Pages/SrvMon/Events/Details.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Events/Details.cshtml
@@ -3,6 +3,7 @@
 
 @{
     ViewData["Title"] = "AmGPGU IT";
+    string name;
 }
 
 <div>
@@ -13,7 +14,10 @@
             @Html.DisplayNameFor(model => model.ServEvent.Server)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ServEvent.Server.Name)
+            @{
+                name = !string.IsNullOrEmpty(Model.ServEvent.Server.Name) ? Model.ServEvent.Server.Name : Model.ServEvent.Server.IpAddress;
+            }
+            @Html.DisplayFor(model => name)
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ServEvent.DateTime)
