--- a/ServMon/ServMon/Pages/SrvMon/Servers/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Servers/Create.cshtml
@@ -9,6 +9,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @if (Model.errorMessage.Length > 0)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>@Model.errorMessage</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -39,11 +46,14 @@
             <div class="form-group">
                 @Html.DisplayNameFor(model => model.Users)
                 <div class="border border-2" style="padding: 1em">
-                    @foreach (var item in Model.Users)
+                    @if (Model.Users != null)
                     {
-                        <input type="checkbox" name="selectedServers" value="@item.Id" />
-                        @item.Name
-                        <br />
+                        foreach (var item in Model.Users)
+                        {
+                            <input type="checkbox" name="selectedUsers" value="@item.Id" />
+                            @item.Name
+                            <br />
+                        }
                     }
                 </div>
             </div>
