--- a/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
@@ -2,13 +2,21 @@
 @model ServMon.Pages.SrvMon.Users.CreateModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "AmGPGU IT";
+    string servName;
 }
 
 <h4 class="p-4">New user</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
+        @if (Model.errorMessage.Length > 0)
+        {
+            <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                <strong>@Model.errorMessage</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        }
         <form method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -42,7 +50,8 @@
                     @foreach (var item in Model.Servers)
                     {
                         <input type="checkbox" name="selectedServers" value="@item.Id" />
-                        @item.Name
+                        servName = !string.IsNullOrEmpty(item.Name) ? item.Name : item.IpAddress;
+                        @Html.DisplayFor(modelItem => servName)
                         <br />
                     }
                 </div>
