--- a/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Create.cshtml
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-teal" />
             </div>
         </form>
     </div>
