--- a/ServMon/ServMon/Pages/SrvMon/Users/Edit.cshtml
+++ b/ServMon/ServMon/Pages/SrvMon/Users/Edit.cshtml
@@ -62,7 +62,7 @@
                 </div>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-teal" />
             </div>
             
         </form>
